fix: photos, images and icons in interfaces looking blurry
#171

--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -137,6 +137,8 @@ li {
 img,
 a img {
   border-style: none;
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: pixelated;
 }
 
 h1,
